remove localhost - enable dir /opt/nagios/etc/servers

--- a/overlay/opt/nagios/etc/nagios.cfg
+++ b/overlay/opt/nagios/etc/nagios.cfg
@@ -31,8 +31,11 @@ cfg_file=/opt/nagios/etc/objects/contacts.cfg
 cfg_file=/opt/nagios/etc/objects/timeperiods.cfg
 cfg_file=/opt/nagios/etc/objects/templates.cfg
 
-# Definitions for monitoring the local (Linux) host
-cfg_file=/opt/nagios/etc/objects/localhost.cfg
+#running in k8s - not relevant
+#Definitions for monitoring the local (Linux) host
+#cfg_file=/opt/nagios/etc/objects/localhost.cfg
+
+#cfg_file=/opt/nagios/etc/objects/localhost.cfg
 
 # Definitions for monitoring a Windows machine
 #cfg_file=/opt/nagios/etc/objects/windows.cfg
@@ -48,12 +51,10 @@ cfg_file=/opt/nagios/etc/objects/localhost.cfg
 # extension) in a particular directory by using the cfg_dir
 # directive as shown below:
 
-#cfg_dir=/opt/nagios/etc/servers
+cfg_dir=/opt/nagios/etc/servers
 #cfg_dir=/opt/nagios/etc/printers
 #cfg_dir=/opt/nagios/etc/switches
 #cfg_dir=/opt/nagios/etc/routers
-
-
 
 
 # OBJECT CACHE FILE
