adds check_nrpe and ipmi commands

--- a/overlay/opt/nagios/etc/objects/commands.cfg
+++ b/overlay/opt/nagios/etc/objects/commands.cfg
@@ -236,3 +236,28 @@ define command {
         command_line    /opt/nagiosgraph/bin/insert.pl
 }
 
+# REMOTE QUERY COMMANDS
+# FREEFORM
+
+define command{
+        command_name    check_nrpe
+        command_line    /opt/nagios/libexec/check_nrpe -H $HOSTADDRESS$ -c $ARG1$ -a $ARG2$
+}
+
+# PREDEFINED
+define command{ 
+        command_name check_nrpe_1arg
+        command_line /opt/nagios/libexec/check_nrpe -H $HOSTADDRESS$ -c $ARG1$
+}
+
+#IPMI
+define command{
+  command_name  check_ipmi_sensor_all
+  command_line  /opt/nagios/libexec/check_ipmi_sensor -H $_HOSTIPMI_IP$ -f $ARG1$  -vv           ;check all sensors
+}
+
+define command{
+  command_name  check_ipmi_sensor
+  command_line  /opt/nagios/libexec/check_ipmi_sensor -H $_HOSTIPMI_IP$ -f $ARG1$ -i $ARG2$ -vv   ;check only specific sensors
+}
+
